clusters/plex-r620/applications/unifi/headers-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-headers
  namespace: unifi
spec:
  headers:
    customRequestHeaders:
      Authorization: ""
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
