clusters/plex-r620/applications/unifi/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: unifi
spec:
  redirectScheme:
    scheme: https
    permanent: true
