clusters/plex-r620/applications/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: step-ca-acme-external
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: unifi-unifi-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - unifi.homelab.local
      secretName: unifi-controller-tls
  rules:
    - host: unifi.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
